PhantomSDK/Inc/PhFile.h

typedef char *PSTR;
typedef void *PVOID;
/*****************************************************************************/

// Info about a write cine file
// in progress operation
typedef struct tagSAVECINEINFO
{
    CINEHANDLE		CH;
    UINT			progressPercent;
}
SAVECINEINFO, *PSAVECINEINFO;
/*****************************************************************************/


// Progress indicator
typedef BOOL (WINAPI* PROGRESSCB)(UINT Percent, CINEHANDLE hC);
/*****************************************************************************/

// Cine use case
EXIMPROC HRESULT PhSetUseCase(CINEHANDLE hC, INT CineUseCaseID);
EXIMPROC HRESULT PhGetUseCase(CINEHANDLE hC, PINT pCineUseCaseID);
/*****************************************************************************/

// Cine get/set
EXIMPROC HRESULT PhGetCineInfo(CINEHANDLE hC, UINT Selector, PVOID pVal);
EXIMPROC HRESULT PhSetCineInfo(CINEHANDLE hC, UINT Selector, PVOID pVal);
/*****************************************************************************/

// Write cine to file
EXIMPROC HRESULT PhWriteCineFile(CINEHANDLE hC, PROGRESSCB pfnCallback);
EXIMPROC HRESULT PhWriteCineFileAsync(CINEHANDLE hC, PROGRESSCB pfnCallback);
EXIMPROC HRESULT PhGetWriteCineFileProgress(CINEHANDLE hC, PUINT pProgressPercent);
EXIMPROC HRESULT PhStopWriteCineFileAsync(CINEHANDLE hC);
EXIMPROC HRESULT PhGetWriteCineFileProgressAll(PSAVECINEINFO pSaveCineInfo, PUINT pCount);
EXIMPROC BOOL PhGetSaveCineName(CINEHANDLE hC);
EXIMPROC BOOL PhGetSaveCinePath(CINEHANDLE hC);
/*****************************************************************************/

// Get auxiliary data
EXIMPROC HRESULT PhGetCineAuxData(CINEHANDLE hC, INT ImageNumber, UINT SelectionCode, UINT DataSize, PVOID pData);
// Get cine image time
EXIMPROC HRESULT PhPrintTime(CINEHANDLE hC, INT ImNo, UINT Options, PSTR szTime);
// Auto white balance
EXIMPROC HRESULT PhMeasureCineWB(CINEHANDLE hC, PPOINT pP, int SquareSide, PIMRANGE pRng, PWBGAIN pWB, PUINT pSatCnt);
EXIMPROC HRESULT PhGetCineTriggerTime(CINEHANDLE hC, PTIME64 pTriggerTime);