PhantomSDK/PhWrapperCs/PhFile.cs


        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetUseCase(IntPtr CH, [MarshalAs(UnmanagedType.I4)]UseCase cineUseCaseID);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetUseCase(IntPtr CH, out UseCase cineUseCaseID);
       
        #endregion

        #region Save Cine Images to File

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PhGetSaveCineName(IntPtr CH);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PhGetSaveCinePath(IntPtr CH);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhWriteCineFile(IntPtr CH, PROGRESSCB pfnCallback);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhWriteCineFileAsync(IntPtr CH, PROGRESSCB pfnCallback);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhStopWriteCineFileAsync(IntPtr CH);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetWriteCineFileProgress(IntPtr CH, ref UInt32 progress);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetWriteCineFileProgressAll(IntPtr pSaveCineInfo, ref UInt32 count);
             
        #endregion

        #region Cine Parameters


        //
        ////////// PhSetCineInfo Overload
        //
        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, IntPtr pInfVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, ref IntPtr pInfVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, ref Int32 infVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, ref UInt32 infVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, ref float infVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhSetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, ref RECT infVal);


        //
        ////////// PhGetCineInfo Overload
        //
        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, IntPtr pInfVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, out IntPtr pInfVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, out Int32 infVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, out UInt32 infVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, out StringBuilder pInfVal);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineInfo(IntPtr CH, [MarshalAs(UnmanagedType.U4)]CineInfo InfName, out RECT pInfVal);

        //
        ////////// 
        //
        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineAuxData(IntPtr CH, Int32 ImageNumber, [MarshalAs(UnmanagedType.U4)] GAD SelectionCode, UInt32 DataSize, IntPtr pData);

        //
        ////////// PhMeasureCineWB Overload
        //
        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhMeasureCineWB(IntPtr cineHandle, ref Point p, int SquareSide,
            ref ImRange rng, ref WBGain wb, out uint SatCnt);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhMeasureCineWB(IntPtr cineHandle, ref Point p, int SquareSide,
            ref ImRange rng, IntPtr wb, out uint SatCnt);

        //
        //////////
        //
        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhMeasureCineWB(IntPtr cineHandle, ref Point p, int SquareSide,
            ref ImRange rng, ref WBGain wb, IntPtr nullSatCnt);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhPrintTime(IntPtr cineHandle, int ImNo, uint Options, IntPtr szTime);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineTriggerTime(IntPtr cineHandle, IntPtr pTriggerTime);

        [DllImport("phfile.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern HRESULT PhGetCineTriggerTime(IntPtr cineHandle, ref Time64 t64);
        
        #endregion

    }
}
